--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "telegraf": "^4.12.2",
-    "telegraf-session-local": "^2.1.1"
+    "telegraf": "^4.12.2"
   }
 }
